--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NoKitchenMusic.io</title>
+    <title>NoKitchenMusic</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header class="fade-in">
-            <h1>NoKitchenMusic.io</h1>
+            <h1>NoKitchenMusic</h1>
             <p>Find music for your film, tv, commercials, video games.</p>
         </header>
         <section class="how-it-works fade-in">
